<resources>
    <string name="app_name">Kirana Store</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="language">Language</string>
    <string name="phone">"Phone no : "</string>
    <string name="mark_delivered">delivered</string>
    <string name="mark_undelivered">undelivered</string>
    <string name="no_record_found">No record found</string>
    <string name="total_items">Total items: </string>
    <string name="total_rs">"Total  ₹ "</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="product_removed_from_cart">Item removed from cart</string>
    <string name="quantity">Quantity: </string>
    <string name="name_error">Name can not be empty</string>
    <string name="uploading">Uploading</string>
    <string name="image_upload_failed">Image upload failed</string>
    <string name="updating_without_image">Updating without image</string>
    <string name="price_error">Price cannot be 0 or negetive</string>
    <string name="empty_credentials">Empty credentials</string>
    <string name="you_cannot_order_to_yourself">You cannot order yourself</string>
    <string name="place_order">place order</string>
    <string name="go_to_home">go to home</string>
    <string name="order_successful">Your have successfully placed order</string>
    <string name="cart_empty">Your cart is empty</string>
    <string name="phone_error">Phone number should be 10 \'digits\' only</string>
    <string name="updated_successfully">Updated successfully</string>
    <string name="please_wait">Please wait...</string>
    <string name="password_error">Password too short</string>
    <string name="registration_successfull_message">Registration successful, Login to shop</string>
    <string name="order_message">Order something to see history</string>
    <string name="add_category">Add Category</string>
    <string name="save">SAVE</string>
    <string name="change_photo">Change Photo</string>
    <string name="category_name">Category name</string>
    <string name="delete_product">Delete Product</string>
    <string name="add_product">Add product</string>
    <string name="product_description">Product description</string>
    <string name="product_name">Product name</string>
    <string name="order_history">Order History</string>
    <string name="all">All</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
    <string name="your_cart">Your cart</string>
    <string name="naresh_kirana_store">Naresh Kirana Store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="new_user_register">New user? Register</string>
    <string name="register">Register</string>
    <string name="order_details">Order Details</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_changed">Language changed</string>
    <string name="change_language">Change language</string>
    <string name="logout">Logout</string>
    <string name="home">Homepage</string>
    <string name="phone_leading_zero">Phone number should not contain leading zero</string>
    <string name="product_price">product_price</string>


</resources>