<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/admin" android:enabled="false" android:visible="false">
        <item android:id="@+id/nav_add_category"
            android:icon="@drawable/ic_add_category"
            android:visible="true"
            android:title="@string/add_category"
            app:showAsAction="ifRoom"/>
        <item android:id="@+id/nav_add_product"
            android:icon="@drawable/ic_add"
            android:visible="true"
            android:title="@string/add_product"
            app:showAsAction="ifRoom"/>
    </group>

    <group android:id="@+id/user">

    <item android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always"/>

    <item android:id="@+id/nav_order_history"
        android:icon="@drawable/ic_history"
        android:title="@string/order_history"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/nav_language"
        android:icon="@drawable/ic_language"
        android:title="@string/change_language"
        app:showAsAction="ifRoom"/>
    </group>



    <item android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:visible="true"
        android:title="@string/logout"
        app:showAsAction="always"/>
</menu>