<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEditProductActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_product"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/close"/>
                <TextView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:padding="10dp">
            <ImageView
                android:id="@+id/edit_product_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_person"
                android:layout_gravity="center"/>
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/change_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_photo"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>
            <Spinner
                android:id="@+id/category_spinner"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_gravity="center"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:layout_marginTop="10dp"
                app:met_floatingLabel="normal"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_product_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_description"
                android:layout_marginTop="10dp"
                app:met_floatingLabel="normal"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/product_price"
                android:layout_marginTop="10dp"
                app:met_floatingLabel="normal"/>

            <Button
                android:id="@+id/delete_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/danger"
                android:text="@string/delete_product"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>